@@ -77,6 +77,7 @@
  * @date	August 16, 2014
  * Added new typography styles for better reading
  * Added styles for the "BNS Login" plugin
+ * Added `clear: both` to `footer`
  * Hide "Search" button for search form
  * Updated galleries styles to use HTML5 markup
  * Updated font-size of excerpt more link symbol to 35px from 200%
@@ -1994,6 +1995,10 @@ div.post.format-audio .post-content a {
 /** End: Post-Format: Chat -------------------------------------------------- */
 
 /** === Footer === ---------------------------------------------------------- */
+footer {
+	clear: both;
+}
+
 h6#site-generator {
 	border-top: 1px solid #e0e0e0;
 }
